testsuite/tests/jst-modular-extensions/user_error4.compilers.reference
File "user_error4.ml", line 21, characters 26-69:
21 | let _disabled_extension = [%extension.comprehensions_experimental] ();;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: The extension "comprehensions_experimental" is disabled and cannot be used
